--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,8 @@ jobs:
           cache: true
           dir: ${{ env.QT_INSTALL_DIR }}
           modules: ${{ env.QT_MODULES_INSTALL }}
+        # reset executable path to OS path.
+        run: echo "PATH=/usr/bin:$PATH" >> $GITHUB_ENV
 
       - name: Setup ccache
         uses: Chocobo1/setup-ccache-action@v1
