Revert PATH order to re-prioritize /usr/bin after python installation.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,8 @@ jobs:
           cache: true
           dir: ${{ env.QT_INSTALL_DIR }}
           modules: ${{ env.QT_MODULES_INSTALL }}
-        # reset executable path to OS path.
+
+      - name: Reset executable path to OS path.
         run: echo "PATH=/usr/bin:$PATH" >> $GITHUB_ENV
 
       - name: Setup ccache
