--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,11 +83,13 @@ jobs:
           packages: ${PACKAGES_ALL}
           version: ${{runner.os}}-apt
 
-      - name: Install and cache basic Python for aqt and fixtures-tool
+      - name: Install python for aqt and fixtures-tool
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.10'
           cache: 'pip'
+          cache-dependency-path: |
+            .github/workflows/python-requirements-test.txt
 
       - name: Install Qt through aqt
         uses: jurplel/install-qt-action@v3
@@ -96,9 +98,6 @@ jobs:
           cache: true
           dir: ${{ env.QT_INSTALL_DIR }}
           modules: ${{ env.QT_MODULES_INSTALL }}
-
-      - name: Install python-lxml for fixtures-tool
-        run: pip install lxml
 
       - name: Setup ccache
         uses: Chocobo1/setup-ccache-action@v1
