--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
           packages: ${PACKAGES_ALL}
           version: ${{runner.os}}-apt
 
-      - name: Install Qt through aqt
+      - name: Install Qt through aqt (and python)
         uses: jurplel/install-qt-action@v3
         with:
           version: ${{ env.QT_VERSION }}
@@ -91,13 +91,8 @@ jobs:
           dir: ${{ env.QT_INSTALL_DIR }}
           modules: ${{ env.QT_MODULES_INSTALL }}
 
-      - name: Install python for aqt and fixtures-tool
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          cache: 'pip'
-          cache-dependency-path: |
-            .github/workflows/python-requirements-test.txt
+      - name: Install python-lxml for fixtures-tool # with the now-registered python
+        run: pip install lxml
 
       - name: Setup ccache
         uses: Chocobo1/setup-ccache-action@v1
