--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,17 @@ on: ["push", "pull_request"]
 
 jobs:
   build-linux:
+    if: false
     runs-on: ubuntu-20.04
     name: QLCplus Linux ${{matrix.task}}
     strategy:
       fail-fast: false
       matrix:
-        task: [compile-qt5qml]
-        #task: [compile-qt5, compile-qt5qml,coverage-qt5]
+        task: [compile-qt5, compile-qt5qml,coverage-qt5]
+        #task: [compile-qt5qml]
     env:
-      CI_REPO_SLUG: ${{ github.repository }} 
-      CI_BRANCH: ${{ github.head_ref }} 
+      CI_REPO_SLUG: ${{ github.repository }}
+      CI_BRANCH: ${{ github.head_ref }}
       CI_PULL_REQUEST: ${{ github.event.number }}
       CC: gcc
       CXX: g++
@@ -91,7 +92,7 @@ jobs:
           dir: ${{ env.QT_INSTALL_DIR }}
           modules: ${{ env.QT_MODULES_INSTALL }}
 
-      - name: Install python-lxml for fixtures-tool # with the now-registered python
+      - name: Install python-lxml for fixtures-tool # with the now-registered aqt python
         run: pip install lxml
 
       - name: Setup ccache
@@ -128,7 +129,7 @@ jobs:
         if: ${{ matrix.task == 'compile-qt5' }}
         shell: bash
         run: ${QMAKE} QMAKE_CXX="${CXX}" QMAKE_CC="${CC}" QMAKE_LINK="${CXX}" QMAKE_LINK_SHLIB="${CXX}"
-          
+
       - name: Configure for QT5QML build
         if: ${{ matrix.task == 'compile-qt5qml' }}
         shell: bash
@@ -141,7 +142,7 @@ jobs:
 
       - name: Build
         shell: bash
-        run: make -j $NPROC 
+        run: make -j $NPROC
 
       - name: Test
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
@@ -159,3 +160,153 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: coverage/coverage.info
+
+  build-windows:
+    runs-on: windows-latest
+    name: QLCplus Windows ${{matrix.task}}
+    strategy:
+      fail-fast: false
+      matrix:
+        task: [compile-qt5]
+        #task: [compile-qt5, compile-qt5qml]
+    env:
+      CI_REPO_SLUG: ${{ github.repository }}
+      CI_BRANCH: ${{ github.head_ref }}
+      CI_PULL_REQUEST: ${{ github.event.number }}
+      CC: gcc
+      CXX: g++
+      QT_MODULES:
+        qtscript
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.5.0
+        with:
+          submodules: false
+
+      - name: Set ENV variables
+        run: |
+          echo "CI_BRANCH=$(echo $GITHUB_REF | awk 'BEGIN { FS = '/' } ; { print $3 }')" >> $GITHUB_ENV
+          echo "CI_SECURE_ENV_VARS=$(if [ -z '${{ secrets.something }}' ]; then echo 'false'; else echo 'true'; fi)" >> $GITHUB_ENV
+          echo "CI_EVENT_TYPE=$(if [ 'schedule' == '${{ github.event_name }}' ]; then echo 'cron'; else echo '${{ github.event_name }}'; fi)" >> $GITHUB_ENV
+          echo "NPROC=$(nproc)" >> $GITHUB_ENV
+          echo "TASK=$(echo '${{matrix.task}}' | awk 'BEGIN { FS = '-' } ; { print $1 }')" >> $GITHUB_ENV
+          echo "QT=${QT:-$(echo '${{matrix.task}}' | awk 'BEGIN { FS = '-' } ; { print $2 }')}" >> $GITHUB_ENV
+          echo "QT_VERSION=5.15.2" >> $GITHUB_ENV
+          echo "QT_MODULES_INSTALL=$(echo ${QT_MODULES})" >> $GITHUB_ENV
+          echo "QT_INSTALL_DIR=/c/opt" >> $GITHUB_ENV
+          source $GITHUB_ENV && echo "QTDIR=${QT_INSTALL_DIR}/Qt/${QT_VERSION}/gcc_64" >> $GITHUB_ENV
+          source $GITHUB_ENV && echo "QMAKE=${QTDIR}/bin/qmake" >> $GITHUB_ENV
+
+      - name: Print ENV vars
+        run: |
+          echo "CI_BRANCH: ${CI_BRANCH}"
+          echo "CI_PULL_REQUEST: ${CI_PULL_REQUEST}"
+          echo "CI_REPO_SLUG: ${CI_REPO_SLUG}"
+          echo "CI_EVENT_TYPE: ${CI_EVENT_TYPE}"
+          echo "CI_SECURE_ENV_VARS: ${CI_SECURE_ENV_VARS}"
+          echo "TASK: ${TASK}"
+          echo "QT: ${QT}"
+          echo "NPROC: ${NPROC}"
+
+      - name: Set up MinGW
+        uses: egor-tensin/setup-mingw@v2
+        with:
+          platform: x86
+          cc: false
+
+      - name: Install programs
+        run: |
+          # pacman --noconfirm -Sy
+          # pacman --noconfirm --needed -S pacman-mirrors
+          pacman --noconfirm -Syu
+          pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-libusb
+          # pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-qt5 unzip mingw32/mingw-w64-i686-nsis
+          wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst -P /c/projects
+          wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-11.3.0-2-any.pkg.tar.zst -P /c/projects
+          # wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst -P /c/projects
+          pacman --noconfirm -Rdd mingw-w64-i686-gcc
+          pacman --noconfirm -Rdd mingw-w64-i686-gcc-libs
+          pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst
+          pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-11.3.0-2-any.pkg.tar.zst
+          # pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst
+
+      - name: Install Qt through aqt (and python)
+        uses: jurplel/install-qt-action@v3
+        with:
+          version: ${{ env.QT_VERSION }}
+          cache: true
+          dir: ${{ env.QT_INSTALL_DIR }}
+          modules: ${{ env.QT_MODULES_INSTALL }}
+
+      - name: Install python-lxml for fixtures-tool # with the now-registered aqt python
+        run: pip install lxml
+
+      - name: Setup ccache
+        uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
+          install_ccache: false
+          ccache_options: |
+            max_size=2G
+            compression=false
+
+      - name: Setup ruby cache
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
+          bundler-cache: true
+
+      - name: Print program versions
+        run: |
+          echo "GCC:"
+          which gcc
+          gcc -v
+          echo "qmake:"
+          which qmake
+          qmake -v
+
+      - name: D2XX SDK
+        run: |
+          mkdir -p /c/Qt/D2XXSDK
+          wget http://www.ftdichip.com/Drivers/CDM/CDM%20v2.12.36.4%20WHQL%20Certified.zip -O /c/Qt/D2XXSDK/cdm.zip
+          cd /c/Qt/D2XXSDK
+          unzip cdm.zip
+          cd i386
+          gendef.exe - ftd2xx.dll > ftd2xx.def
+          dlltool -k --input-def ftd2xx.def --dllname ftd2xx.dll --output-lib libftd2xx.a
+
+      - name: Disable unit tests build
+        if: false
+        run: |
+          # disable the test units, since we won't run them
+          sed -i -e 's/  SUBDIRS += test/#SUBDIRS += test/g' engine/engine.pro
+          sed -i -e 's/SUBDIRS += test/#SUBDIRS += test/g' ui/ui.pro
+          sed -i -e 's/ SUBDIRS              += velleman/#SUBDIRS += velleman/g' plugins/plugins.pro
+          sed -i -e 's/  SUBDIRS += test/#SUBDIRS += test/g' plugins/artnet/artnet.pro
+          sed -i -e 's/SUBDIRS += test/#SUBDIRS += test/g' plugins/enttecwing/enttecwing.pro
+          sed -i -e 's/SUBDIRS += test/#SUBDIRS += test/g' plugins/midi/midi.pro
+
+      - name: Build for Windows
+        run: |
+          qmake FORCECONFIG=release
+          make
+
+      - name: Test
+        shell: bash
+        run: make check
+
+      - name: Install on Windows
+        run: |
+          echo 'Silently installing QLC+...'
+          make install -s
+          cp *.qm /c/qlcplus
+
+      - name: Build installation package
+        run: |
+          cd /c/qlcplus
+          sed -i -e 's/Qt/projects/g' qlcplus4Qt5.nsi
+          echo 'Creating package...'
+          makensis -X'SetCompressor /FINAL lzma' qlcplus4Qt5.nsi
+          #set CURRDATE=`date +%Y%m%d`
+          mv QLC+_*.exe /c/projects/qlcplus/QLC+_$APPVEYOR_BUILD_VERSION.exe
