Syntax error, set shell to bash.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -185,6 +185,7 @@ jobs:
           submodules: false
 
       - name: Set ENV variables
+        shell: bash
         run: |
           echo "CI_BRANCH=$(echo $GITHUB_REF | awk 'BEGIN { FS = '/' } ; { print $3 }')" >> $GITHUB_ENV
           echo "CI_SECURE_ENV_VARS=$(if [ -z '${{ secrets.something }}' ]; then echo 'false'; else echo 'true'; fi)" >> $GITHUB_ENV
@@ -199,6 +200,7 @@ jobs:
           source $GITHUB_ENV && echo "QMAKE=${QTDIR}/bin/qmake" >> $GITHUB_ENV
 
       - name: Print ENV vars
+        shell: bash
         run: |
           echo "CI_BRANCH: ${CI_BRANCH}"
           echo "CI_PULL_REQUEST: ${CI_PULL_REQUEST}"
@@ -216,6 +218,7 @@ jobs:
           cc: false
 
       - name: Install programs
+        shell: bash
         run: |
           # pacman --noconfirm -Sy
           # pacman --noconfirm --needed -S pacman-mirrors
@@ -240,6 +243,7 @@ jobs:
           modules: ${{ env.QT_MODULES_INSTALL }}
 
       - name: Install python-lxml for fixtures-tool # with the now-registered aqt python
+        shell: bash
         run: pip install lxml
 
       - name: Setup ccache
@@ -258,6 +262,7 @@ jobs:
           bundler-cache: true
 
       - name: Print program versions
+        shell: bash
         run: |
           echo "GCC:"
           which gcc
@@ -267,6 +272,7 @@ jobs:
           qmake -v
 
       - name: D2XX SDK
+        shell: bash
         run: |
           mkdir -p /c/Qt/D2XXSDK
           wget http://www.ftdichip.com/Drivers/CDM/CDM%20v2.12.36.4%20WHQL%20Certified.zip -O /c/Qt/D2XXSDK/cdm.zip
@@ -278,6 +284,7 @@ jobs:
 
       - name: Disable unit tests build
         if: false
+        shell: bash
         run: |
           # disable the test units, since we won't run them
           sed -i -e 's/  SUBDIRS += test/#SUBDIRS += test/g' engine/engine.pro
@@ -288,6 +295,7 @@ jobs:
           sed -i -e 's/SUBDIRS += test/#SUBDIRS += test/g' plugins/midi/midi.pro
 
       - name: Build for Windows
+        shell: bash
         run: |
           qmake FORCECONFIG=release
           make
@@ -297,12 +305,14 @@ jobs:
         run: make check
 
       - name: Install on Windows
+        shell: bash
         run: |
           echo 'Silently installing QLC+...'
           make install -s
           cp *.qm /c/qlcplus
 
       - name: Build installation package
+        shell: bash
         run: |
           cd /c/qlcplus
           sed -i -e 's/Qt/projects/g' qlcplus4Qt5.nsi
