--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -215,20 +215,34 @@ jobs:
           echo "QT: ${QT}"
           echo "NPROC: ${NPROC}"
 
-      - name: Install programs
+      - name: Update and install MSYS22
+        uses: msys2/setup-msys2@v2
+        with:
+          release: false
+          update: true
+          install: >-
+            mingw32/mingw-w64-i686-libmad
+            mingw32/mingw-w64-i686-libsndfile
+            mingw32/mingw-w64-i686-flac
+            mingw32/mingw-w64-i686-fftw
+            mingw32/mingw-w64-i686-libusb
+
+      - name: Install GCC
+        if: false
+        shell: msys2
         run: |
           # pacman --noconfirm -Sy
           # pacman --noconfirm --needed -S pacman-mirrors
-          pacman --noconfirm -Syu
-          pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-libusb
+          ##pacman --noconfirm -Syu
+          ##pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-libusb
           # pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-qt5 unzip mingw32/mingw-w64-i686-nsis
-          wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst -P /c/projects
           wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-11.3.0-2-any.pkg.tar.zst -P /c/projects
+          wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst -P /c/projects
           # wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst -P /c/projects
           pacman --noconfirm -Rdd mingw-w64-i686-gcc
           pacman --noconfirm -Rdd mingw-w64-i686-gcc-libs
-          pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst
           pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-11.3.0-2-any.pkg.tar.zst
+          pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst
           # pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst
 
       - name: Install Qt through aqt (and python)
