--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.5.0
+        uses: actions/checkout@v2
         with:
           submodules: false
 
@@ -153,7 +153,7 @@ jobs:
 
       - name: Coveralls
         if: ${{ startsWith( matrix.task, 'coverage') }}
-        uses: coverallsapp/github-action@v1.1.2
+        uses: coverallsapp/github-action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: coverage/coverage.info
@@ -180,15 +180,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.5.0
+        uses: actions/checkout@v2
         with:
           submodules: false
-
-#      - name: Set up MinGW
-#        uses: egor-tensin/setup-mingw@v2
-#        with:
-#          platform: x86
-#          cc: false
 
       - name: Set ENV variables
         run: |
@@ -230,6 +224,9 @@ jobs:
 
       - name: Install GCC and libs
         run: |
+          ls -l /usr/bin/
+          printenv
+          which wget
           # pacman --noconfirm -Sy
           # pacman --noconfirm --needed -S pacman-mirrors
           ##pacman --noconfirm -Syu
