--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,7 +212,7 @@ jobs:
       - name: Update and install MSYS2
         uses: msys2/setup-msys2@v2
         with:
-          release: true
+          release: false
           update: true
           install: >-
             wget
@@ -225,15 +225,14 @@ jobs:
       - name: Install GCC and libs
         run: |
           ls -l /usr/bin/
-          printenv
-          which wget
+          find / -iname 'wget*'
           # pacman --noconfirm -Sy
           # pacman --noconfirm --needed -S pacman-mirrors
           ##pacman --noconfirm -Syu
           ##pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-libusb
           # pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-qt5 unzip mingw32/mingw-w64-i686-nsis
-          wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-11.3.0-2-any.pkg.tar.zst -P /c/projects
-          wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst -P /c/projects
+          wget.exe http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-11.3.0-2-any.pkg.tar.zst -P /c/projects
+          wget.exe http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-11.3.0-2-any.pkg.tar.zst -P /c/projects
           # wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst -P /c/projects
           pacman --noconfirm -Rdd mingw-w64-i686-gcc
           pacman --noconfirm -Rdd mingw-w64-i686-gcc-libs
