--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -294,8 +294,8 @@ jobs:
           echo "qmake:"
           which ${QMAKE} || true
           ${QMAKE} -v || true
+          find -maxdepth3 /c/opt/Qt/
           ls -l ${QTDIR}/bin
-          ls -l /c/opt/Qt/
 
       - name: Disable unit tests build
         if: false
