--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -159,7 +159,7 @@ jobs:
           path-to-lcov: coverage/coverage.info
 
   build-windows:
-    #if: false
+    if: false
     runs-on: windows-latest
     name: QLCplus Windows Build ${{matrix.task}}
     strategy:
