--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -196,9 +196,9 @@ jobs:
           echo "QT=${QT:-$(echo '${{matrix.task}}' | awk 'BEGIN {FS=-}; {print $2}')}" >> $GITHUB_ENV
           echo "QT_VERSION=5.15.2" >> $GITHUB_ENV
           echo "QT_MODULES_INSTALL=$(echo ${QT_MODULES})" >> $GITHUB_ENV
-          echo "QT_INSTALL_DIR=/c/opt" >> $GITHUB_ENV
-          source $GITHUB_ENV && echo "QTDIR=${QT_INSTALL_DIR}/Qt/${QT_VERSION}/gcc_64" >> $GITHUB_ENV
-          echo "QMAKE=qmake.exe" >> $GITHUB_ENV
+          echo "QT_INSTALL_DIR=/mingw32/qt5-static" >> $GITHUB_ENV
+          source $GITHUB_ENV && echo "QTDIR=/mingw32/qt5-static" >> $GITHUB_ENV
+          source $GITHUB_ENV && echo "QMAKE=${QTDIR}/bin/qmake.exe" >> $GITHUB_ENV
 
       - name: Print ENV vars
         shell: bash
